pages/page1/assets/css/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    text-decoration: none;
    font-optical-sizing: auto;
}

body {
    background-color: #000000;
}

.header {
    position: absolute;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: rgba(0, 0, 0, 0.500);
}

.header .middle {
    font-size: 0.9rem;
    position: relative;
    left: 50%;
    transform: translateX(-50%);
    display: flex;
    gap: 1.5rem;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
}

.header .company_logo {
    max-width: 2.8rem;
}

.btn {
    font-weight: 300;
    font-size: .6rem;
    color: rgb(255, 255, 255);
    font-family: "Roboto", sans-serif;

    border: 1px rgb(255, 255, 255) solid;
    background-color: #ffffff45;
}

.middle>* {
    padding: .4rem;
    border-radius: 15px;
}

.section {
    height: 100dvh;
}

.section .background {
    width: 100%;
    height: 100%;
    background-image: url('assets/img/background.gif');
    background-size: 100%;
    z-index: -1;
}

.section .content {
    background-color: rgba(129, 129, 129, 0.532);
}

